--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,9 @@
+# .github/FUNDING.yml
 
+ github: ["tejindrakhatri1"]
+
+# Custom funding links (these work for everyone)
+custom:
+  - "https://www.buymeacoffee.com/tejindra"
+  - "https://paypal.me/tejindrakhatri"
+  - "https://ko-fi.com/tejindra"
